--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title> Judy Chan </title>
+  <title> Judy Chan | UI / UX DESIGNER </title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://use.typekit.net/psh8sqs.css">
 </head>
@@ -11,13 +11,16 @@
   <header>
     <div class="headerleft">JUDY CHAN<span class="lighter"> &nbsp; | &nbsp;UI / UX DESIGNER</span></div>
     <div class="headerright">
-      <span class="lighter">PROJECTS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ABOUT
+      <span class="lighter">
+        <a href=#>PROJECTS</a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href=#>ABOUT</a>
       </span>
      </div>
   </header>
   
   <div class="sparklerbg">
-    <img src="source/Picture1.png">
+    <img src="source/picture1.png">
     <div class="rotatingwords">
       <span>experience</span>
       <span>interface</span>
