--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
   
   <div class="sparklerbg">
-    <img src="source/picture1.png">
+    <img src="source/Picture1.png">
     <div class="rotatingwords">
       <span>experience</span>
       <span>interface</span>
