--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <p>UI / UX Design Certificate at Pratt Institute.
               </h4>
               <p class="whitetext"> stuff </p>
-              <br><img src="source/sketches.png" width=30%>
+              <br><img src="source/Sketches.png" width=30%>
        
           </div>
         </div>
