--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--popups-->
     <!--projects-->
     <div id="open-proj-modal" class="proj-modal">
-      <img src="source/Picture2.png" class="bokeh">
+      <!--<img src="source/Picture2.png" class="bokeh">-->
       <div>
         <a href="#close" title="Close" class="close">ⓧ</a>
         <div class="overlaytext">
@@ -57,7 +57,7 @@
 
       <!--about-->
       <div id="open-about-modal" class="proj-modal">
-        <img src="source/Picture2.png" class="bokeh">
+        <!--<img src="source/Picture2.png" class="bokeh">-->
         <div>
           <a href="#close" title="Close" class="close">ⓧ</a>
           <div class="overlaytext">
@@ -69,14 +69,13 @@
                 <p>UI / UX Design Certificate at Pratt Institute.
               </h4>
               <p class="whitetext"> stuff </p>
-              <br><img src="source/Sketches.png" width=30%>
+              <br><img src="source/sketches.png" width=30%>
        
           </div>
         </div>
        </div>
 
     <!--sparkler-->
-      <img src="source/Picture1.png" class="sparkler">
       <div class="rotatingwords">
         <span>experience</span>
         <span>interface</span>
