--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title> Judy Chan | UI / UX DESIGNER </title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" href="https://use.typekit.net/psh8sqs.css">
+  <link rel="stylesheet" href="https://use.typekit.net/yfg1sqb.css">
 </head>
 
 <body>
