--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <div class="headerleft"><b><a href=index.html>JUDY CHAN</a></b> &nbsp; | &nbsp;UI / UX DESIGNER</div>
+    <div class="headerleft"><b><a href="/index.html">JUDY CHAN</a></b> &nbsp; | &nbsp;UI / UX DESIGNER</div>
     <div class="headerright">
       <span class="lighter">
         <a href="#open-proj-modal">PROJECTS</a>
