--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="headerleft"><b><a href=#>JUDY CHAN</a></b> &nbsp; | &nbsp;UI / UX DESIGNER</div>
     <div class="headerright">
       <span class="lighter">
-        <a href="#open-proj-modal">PROJECTS</a>
+        <a href="#projects">PROJECTS</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="#open-about-modal">ABOUT</a>
+        <a href="#about">ABOUT</a>
       </span>
   </header>
   
@@ -22,8 +22,7 @@
   <div class="bodysection">
     <!--popups-->
     <!--projects-->
-    <div id="open-proj-modal" class="proj-modal">
-      <!--<img src="source/Picture2.png" class="bokeh">-->
+    <div id="projects" class="proj-modal">
       <div>
         <a href="#close" title="Close" class="close">ⓧ</a>
         <div class="overlaytext">
@@ -56,20 +55,16 @@
     </div>
 
       <!--about-->
-      <div id="open-about-modal" class="proj-modal">
-        <!--<img src="source/Picture2.png" class="bokeh">-->
+      <div id="about" class="proj-modal">
         <div>
           <a href="#close" title="Close" class="close">ⓧ</a>
           <div class="overlaytext">
               <br><br><br>
               <h2 class="whitetext"> Judy is a designer based in New York City.</h2>
-              <h4 class="whitetext"> 
-                <p>Economics at Cornell University.
-                <p>Digital and Graphic Design Certificate at Parsons School of Design.
-                <p>UI / UX Design Certificate at Pratt Institute.
-              </h4>
-              <p class="whitetext"> stuff </p>
-              <br><img src="source/Sketches.png" width=30%>
+              <p class="whitetext">
+                She studied economics at Cornell and trained in digital and graphic design <br>and UI / UX design at Parsons and Pratt, respectively.
+              </p>
+              <br><img src="source/sketches.png" width=30%>
        
           </div>
         </div>
@@ -80,10 +75,6 @@
         <span>experience</span>
         <span>interface</span>
         <span>interaction</span>
-      </div>
-      <div class="staticwords">
-        <h2 class="whitetext">USER</h2>
-        <br><br><br><br><h2 class="whitetext" id="design">DESIGN</h2>
       </div>
 
 </div>
