--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <p class="whitetext">
                 She studied economics at Cornell and trained in digital and graphic design <br>and UI / UX design at Parsons and Pratt, respectively.
               </p>
-              <br><img src="source/sketches.png" width=30%>
+              <br><img src="source/Sketches.png" width=30%>
        
           </div>
         </div>
