--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <div class="headerleft"><b><a href=#>JUDY CHAN</a></b> &nbsp; | &nbsp;UI / UX DESIGNER</div>
+    <div class="headerleft"><a href=# class="myname">JUDY CHAN</a> &nbsp; | &nbsp;UI / UX DESIGNER</div>
     <div class="headerright">
       <span class="lighter">
         <a href="#projects">PROJECTS</a>
