--- a/index.html
+++ b/index.html
@@ -9,46 +9,50 @@
 
 <body>
   <header>
-    <div class="headerleft"><a href=# class="myname">JUDY CHAN</a> &nbsp; | &nbsp;UI / UX DESIGNER</div>
+    <div class="headerleft"><a href="index.html#close" class="myname">JUDY CHAN</a> &nbsp; | &nbsp;UI / UX DESIGNER</div>
     <div class="headerright">
-      <span class="lighter">
         <a href="#projects">PROJECTS</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="#about">ABOUT</a>
-      </span>
+    </div>
   </header>
   
 
-  <div class="bodysection">
+  <div class="homepagebody">
     <!--popups-->
     <!--projects-->
     <div id="projects" class="proj-modal">
       <div>
         <a href="#close" title="Close" class="close">ⓧ</a>
         <div class="overlaytext">
+          
           <div class="proj 1">
-            <p>
-            <img src="source/Clairvoyage.png" width=35%>
-            <br>
-            <h2 class="whitetext"> Clairvoyage</h2>
-            <h4 class="whitetext"> Travel Mobile Application </h4>
-            <p class="whitetext"> <i>Planning trips with clarity. </i></p>
+            <a href="clairvoyage.html">
+              <p>
+                <img src="source/Clairvoyage.png" width=35%>
+                <br>
+                <h2> CLAIRVOYAGE</h2>
+                <h4> Travel Mobile Application </h4>
+                <br> <i>Planning trips with clarity. </i>
+            </a>
           </div>
 
           <div class="proj 2">
+            <a href="habit.html"
             <p>
-            <img src="source/Habit.png" width=35%>
-            <br>
-            <h2 class="whitetext"> Habit</h2>
-            <h4 class="whitetext"> Productivity Mobile Application</h4>
-            <p class="whitetext"> <i>Bridging the intention-action gap. </i></p>
+              <img src="source/Habit.png" width=35%>
+              <br>
+              <h2 class="whitetext"> HABIT</h2>
+              <h4 class="whitetext"> Productivity Mobile Application</h4>
+              <p class="whitetext"> <i>Bridging the intention-action gap. </i></p>
+            </a>
           </div>
 
           <div class="proj 3">
             <br><br><br>
-            <h2 class="whitetext"> Sensual Beauty</h2>
-            <h4 class="whitetext"> Retail Website </h4>
-            <p class="whitetext"> <i>Stepping off the carousel. </i></p>
+              <h2 class="whitetext"> SENSUAL BEAUTY</h2>
+              <h4 class="whitetext"> Retail Website </h4>
+              <p class="whitetext"> <i>Stepping off the carousel. </i></p>
           </div>
         </div>
       </div>
