--- a/clairvoyage.html
+++ b/clairvoyage.html
@@ -325,7 +325,7 @@
         <br><br>
         <div class="portfolioblock">        
           <h3>PROTOTYPE</h3>
-          <p> <video autoplay muted loop width="375" src="source/CV Proto I.mp4"></p>
+          <p> <video autoplay muted loop playsinline width="375" src="source/CV Proto I.mp4"></p>
         </div>
         </div>
       </div>
