--- a/clairvoyage.html
+++ b/clairvoyage.html
@@ -27,7 +27,7 @@
         </div>
         <br><br><br><br>
         <div class="portfolioblock">
-          <h3>RESEARCH</h3><br><br>
+          <h3><hr>&nbsp;&nbsp;RESEARCH&nbsp;&nbsp;<hr></h3><br><br><br>
         <div class="artifactcontainer">
           <div class="annotationleft">
             <h5>CONTEXTUAL INTERVIEW FINDINGS</h5>
@@ -41,14 +41,14 @@
           </ul>
           </div>
         </div>
-        <br><br><br>
+        <br><br><br><br>
         <div class="artifactcontainer">
           <div class="artifactcontent">
             <table class="personatable">
               <tr>
                 <td class="col1">
                   <img src="source/persona.svg" style="width:60%">
-                  <h4>MILLENNIAL MEGAN</h4>
+                  <p class="bubbletext">MILLENNIAL<br>MARGO</p>
                 </td>
                 <td class="col2">
                   <ul>
@@ -56,9 +56,9 @@
                     <li>Selective - values research and comparing options</li>
                     <li>Future-oriented - derives utility from planning / anticipation</li>
                   </ul>
-                  <br><img src="source/Logo1.png" style="width:35px">&nbsp;&nbsp;&nbsp;
-                  <img src="source/Logo2.png" style="width:35px">&nbsp;&nbsp;&nbsp;
-                  <img src="source/Logo3.png" style="width:35px">&nbsp;&nbsp;&nbsp;
+                  <br><img src="source/Logo1.png" style="width:35px">&nbsp;&nbsp;&nbsp;&nbsp;
+                  <img src="source/Logo2.png" style="width:35px">&nbsp;&nbsp;&nbsp;&nbsp;
+                  <img src="source/Logo3.png" style="width:35px">&nbsp;&nbsp;&nbsp;&nbsp;
                   <img src="source/Logo4.png" style="width:35px">
                 </td>
               </tr>
@@ -99,36 +99,44 @@
             <br><br>
              <table class="userjourney">
               <tr>
-                <th></th>
-                <th>Plan Itinerary</th>
+                <th class="col1"></th>
+                <th colspan=2>Plan Itinerary</th>
                 <th colspan=3>Plan Accommodation</th>
                 <th>Experience</th>
               </tr>
               <tr>
-                <td>Steps</td>
-                <td>1.&nbsp;Browsing travel-related content (e.g., Instagram, Pinterest)<br><br>2.&nbsp;Locale-specific research (e.g., Tripadvisor, LonelyPlanet)</td>
-                <td>Geographical research – city center research<br><br>Cross-researching on Google</td>
-                <td>Filter hotels based on preferences– price, amenities, rewards, other considerations</td>
-                <td>Read reviews to narrow down potential selections and/or to confirm one’s selection</td>
-                <td>Realize that aspects of the itinerary are not feasible after all</td>
+                <td class="col1">Steps</td>
+                <td>1.&nbsp;Browsing travel-related content (e.g., Instagram, Pinterest)</td>
+                <td>2.&nbsp;Locale-specific research (e.g., Tripadvisor, LonelyPlanet)</td>
+                <td>3.&nbsp;Selecting a hotel location (geographical research)</td>
+                <td>4.&nbsp;Filtering based on preferences (e.g., price, amenities, etc.)</td>
+                <td>5.&nbsp;Read reviews to confirm or dismiss potential selections </td>
+                <td>6.&nbsp;Realize the infeasibility of certain aspects of the itinerary</td>
               </tr>
               <tr>
-                <td>Painpoints</td>
-                <td>Expectations may be formed without sufficient consideration of logistics, which often must be researched separately</td>
-                <td colspan=2>It can be overwhelming to toggle between multiple sources, if one even remembers to<br><br>Judgement calls have to be made regarding compromise of different criteria, but lack of visibility into the consequences of the decisions</td>
-                <td>Unfamiliarity with the extent to which a reviewer’s standards align with one’s own makes it difficult how much weight to assign the review</td>
-                <td>It’s frustrating to have to make last-minute arrangements<br><br>Cancel anticipated aspects of the itinerary due to miscalculations in planning is disappointing</td>
+                <td class="col1">Happiness</td>
+                <td colspan=5><p><img src="source/CVJourney.png" style="width:510px;"></p></td>
               </tr>
               <tr>
-                <td>Opportunities</td>
-                <td>Incorporate consideration of logistics earlier in the planning process</td>
-                <td colspan=2>Streamline research by presenting customized information based on the itinerary items that the user has expressed interest in<br><br>Provide a visual representation of the trip, allowing the user to anticipate problems that might arise…</td>
-                <td>Focus on objective considerations (e.g., photos from visitors) that allow user to draw own conclusions</td>
-                <td>Bring … to the user’s attention during planning to mitigate unpleasant and avoidable surprises</td>
+                <td class="col1">Painpoints</td>
+                <td colspan=2><span class="bolder">Premature expectations</span> may be formed in absence of sufficient consideration of logistics, which often must be researched separately</td>
+                <td colspan=3>Toggling between multiple sources (if one even remembers to) can be <span class="bolder">overwhelming</span>
+                  <!--<br><br>Judgement calls have to be made regarding compromise of different criteria, but lack of visibility into the consequences of the decisions-->
+                  <br><br><span class="bolder">Uncertainty</span> over the weight to assign to a stranger's opinions
+                </td>
+                <td><!--Making last-minute arrangements is <span class="bolder">frustrating</span>
+                  <br><br>-->Canceling anticipated activities due to planning oversights is <span class="bolder">disappointing</span></td>
+              </tr>
+              <tr>
+                <td class="col1">Opportunities</td>
+                <td colspan=2>Incorporate consideration of logistics earlier in the planning process</td>
+                <td colspan=3>Streamline research by: (i) presenting customized information based on user's interests and (ii) aggregating different types of information under one tool
+                  <br><br>Focus on objective considerations (e.g., photos from visitors) that allow user to draw own conclusions</td>
+                <td>Providing a visual representation of the plan facilitates identifying potential inconveniences</td>
               </tr>
             </table>
 
-        <br><br><br>
+        <br><br><br><br>
         <div class="artifactcontainer">
           <div class="annotationleft">
             <h5>COMPETITIVE ANALYSIS</h5>
@@ -231,14 +239,14 @@
         </div>
         <br><br>
         <div class="portfolioblock">
-          <br><h3>IDEATION</h3>
-          <p> Sketches → Wireframes </p>
+          <h3><hr>&nbsp;&nbsp;&nbsp;IDEATION&nbsp;&nbsp;&nbsp;<hr></h3><br><br>
+          Sketches → Wireframes<br><br><br>
           <div class="artifactcontainer">
             <div class="imagecontent">
-                <img src="source/CVSketch1.png" style="width:135px" alt="sketches">
+                <img src="source/CVSketch1.png" style="width:140px" alt="sketches">
             </div>
             <div class="imagecontent">
-                <img src="source/CVWireframe1.png" style="height:225px" alt="wireframe">
+                <img src="source/CVWireframe1.png" style="height:235px" alt="wireframe">
             </div>
             <div class="imagedesc">
               <h6>Search / Discover</h6>
@@ -251,10 +259,10 @@
 
           <div class="artifactcontainer">
             <div class="imagecontent">
-              <img src="source/CVSketch2.png" style="width:135px" alt="sketches">
+              <img src="source/CVSketch2.png" style="width:140px" alt="sketches">
             </div>
             <div class="imagecontent">
-              <img src="source/CVWireframe2.png" style="height:225px" alt="wireframe">
+              <img src="source/CVWireframe2.png" style="height:235px" alt="wireframe">
             </div>
             <div class="imagedesc">
               <h6>Itinerary Catalog</h6>
@@ -267,10 +275,10 @@
 
           <div class="artifactcontainer">
             <div class="imagecontent">
-              <img src="source/CVSketch3.png" style="width:135px" alt="sketches">
+              <img src="source/CVSketch3.png" style="width:140px" alt="sketches">
             </div>
             <div class="imagecontent">
-              <img src="source/CVWireframe3.png" style="height:225px" alt="wireframe">
+              <img src="source/CVWireframe3.png" style="height:235px" alt="wireframe">
             </div>
             <div class="imagedesc">
               <h6>Itinerary Cart</h6>
@@ -283,13 +291,14 @@
 
           <div class="artifactcontainer">
             <div class="imagecontent">
-              <img src="source/CVSketch4.png" style="width:135px" alt="sketches">
+              <img src="source/CVSketch4.png" style="width:140px" alt="sketches">
             </div>
             <div class="imagecontent">
-              <img src="source/CVWireframe4.png" style="height:225px" alt="wireframe" class="ideation">
+              <img src="source/CVWireframe4.png" style="height:235px" alt="wireframe" class="ideation">
             </div>
             <div class="imagedesc">
               <h6>Custom Map</h6>
+              <p class="imagesubheader">See itinerary cart items and potential hotels on one map</p>
               <p>Hotels are presented based on proximity to items in the user’s itinerary cart but can be narrowed down through filtration</p>
             </div>
           </div>
@@ -297,25 +306,30 @@
 
           <div class="artifactcontainer">
             <div class="imagecontent">
-              <img src="source/CVSketch5.png" style="width:135px" alt="sketches">
+              <img src="source/CVSketch5.png" style="width:140px" alt="sketches">
             </div>
             <div class="imagecontent">
-              <img src="source/CVWireframe5.png" style="height:225px" alt="wireframe">
+              <img src="source/CVWireframe5.png" style="height:235px" alt="wireframe">
             </div>
             <div class="imagedesc">
               <h6>Map Filtration</h6>
+              <p class="imagesubheader">Narrow down potential hotels by applying one's preferences</p>
               <p>Filtration is "live" - the number of hotel options updates every time the user edits criteria</p>
-              <p>After selection of preferences, users can “uncheck” one of the filters to easily see what options open up if they loosen up on a certain criteria</p>
+              <p>After selection of preferences, users can “uncheck” one of the filters to easily see how options change if they compromise on a certain criteria</p>
             </div>
           </div>
           <br>
 
           <div class="artifactcontainer">
             <div class="imagecontent">
-              <img src="source/CVSketch6.png" style="width:135px" alt="sketches" class="ideation">
+              <img src="source/CVSketch6.png" style="width:140px" alt="sketches" class="ideation">
+            </div>
+          <div class="imagecontent">
+              <img src="source/CVWireframe6.gif" style="height:235px" alt="wireframe">
             </div>
             <div class="imagedesc">
               <h6>Hotel Detail</h6>
+              <p class="imagesubheader">Browse a summary of a selected hotel, which covers proximity to itinerary item, which desired amenities are met, etc.</p>
               <p>How far a hotel is from itinerary items is prominently presented in order to mitigate overlooking this consideration, which normally would have to be researched separately</p>
             </div>
           </div>
@@ -324,7 +338,7 @@
         </div>
         <br><br>
         <div class="portfolioblock">        
-          <h3>PROTOTYPE</h3>
+          <h3><hr>&nbsp;&nbsp;PROTOTYPE&nbsp;&nbsp;<hr></h3>
           <p> <video autoplay muted loop playsinline width="375" src="source/CV Proto I.mp4"></p>
         </div>
         </div>
