--- a/clairvoyage.html
+++ b/clairvoyage.html
@@ -17,20 +17,22 @@
     </div>
   </header>
 
-  <div class="portfoliobody">
+  <div class="portfoliobodywrapper">
     <!--portfolio / project content-->
+    <div class="portfoliobody">
       <div class="portfoliotop">
         <br><br>
-        <img src="source/clairheaderimage.png" style="width:600px" alt="clairvoyage">
+        <img src="source/clairheaderimage.png" style="width:500px" alt="clairvoyage"> <br><br>
         <h1>CLAIRVOYAGE</h1>
         <i>Technology has made the world a smaller place — use it to facilitate informed decision making when choosing accommodations.</i>
         </div>
         <br><br><br><br>
         <div class="portfolioblock">
-          <h3><hr>&nbsp;&nbsp;RESEARCH&nbsp;&nbsp;<hr></h3><br><br><br>
+          <h3><hr>&nbsp;&nbsp;RESEARCH&nbsp;&nbsp;<hr></h3><br>
+          <p>Six user interviews, which focused on travel accommodation selection approaches, informed the traits featured in the following persona and the identified the challenges as outlined in the following journey map</p><br><br>
         <div class="artifactcontainer">
           <div class="annotationleft">
-            <h5>CONTEXTUAL INTERVIEW FINDINGS</h5>
+            <h5>INTERVIEW FINDINGS</h5>
           </div>
           <div class="artifactcontent">
             <ul>
@@ -240,7 +242,8 @@
         <br><br>
         <div class="portfolioblock">
           <h3><hr>&nbsp;&nbsp;&nbsp;IDEATION&nbsp;&nbsp;&nbsp;<hr></h3><br><br>
-          Sketches → Wireframes<br><br><br>
+          <i>How might we customize the accomodation selection process to allow for more informed decision making?</i><br>
+          <br>Sketches → Wireframes<br><br><br>
           <div class="artifactcontainer">
             <div class="imagecontent">
                 <img src="source/CVSketch1.png" style="width:140px" alt="sketches">
@@ -345,6 +348,7 @@
       </div>
       <p>
   </div>
+</div>
 
 </body>
 </html>
