--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <br>
               <h4> Judy is an end-to-end product designer based in New York City.</h4>
               <p>
-                She studied economics at Cornell and trained in digital and graphic design <br>and UI / UX design at Parsons and Pratt, respectively.
+                She studied economics at Cornell and trained in digital and graphic design and UI / UX design at Parsons and Pratt, respectively.
               </p>
        
           </div>
