--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--projects-->
     <div id="projects" class="proj-modal">
       <div>
-        <a href="#close" title="Close" class="close">×</a>
+        <!--<a href="#close" title="Close" class="close">×</a>-->
         <div class="overlaytext">
           
           <div class="proj 1">
@@ -60,7 +60,7 @@
       <!--about-->
       <div id="about" class="proj-modal">
         <div>
-          <a href="#close" title="Close" class="close">×</a>
+          <!--<a href="#close" title="Close" class="close">×</a>-->
           <div class="overlaytext">
               <br>
               <h4> Judy is an end-to-end product designer based in New York City.</h4>
@@ -72,12 +72,22 @@
         </div>
        </div>
 
-    <!--sparkler-->
+    <!--sparkler
       <div class="rotatingwords">
         <span>experience</span>
         <span>interface</span>
         <span>interaction</span>
       </div>
+    -->
+
+    <div class="sprite">
+      <div class="sprite1">
+      </div>
+      <div class="sprite2">
+      </div>
+      <div class="sprite3">
+      </div>
+    </div>
 
 </div>
 
