--- a/clairvoyage.html
+++ b/clairvoyage.html
@@ -8,20 +8,20 @@
 </head>
 
 <body>
+<div class="portfoliobodywrapper">
+      <div class="portfoliobody">
   <header>
-    <div class="headerleft">
-      <a href="index.html" class="myname">JUDY CHAN</a> &nbsp; | &nbsp;UI / UX DESIGNER
-    </div>
+    <div class="headerleft"><a href="index.html" class="myname">JUDY CHAN</a> <div class="headerdesigner">&nbsp; | &nbsp;UI / UX DESIGNER</div></div>
     <div class="headerright">
         <a href="index.html#projects">PROJECTS</a>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div class="headerdesigner">&nbsp;&nbsp;&nbsp;&nbsp;</div>&nbsp;&nbsp;
         <a href="index.html#about">ABOUT</a>
     </div>
   </header>
 
-  <div class="portfoliobodywrapper">
+  <!--<div class="portfoliobodywrapper">-->
     <!--portfolio / project content-->
-    <div class="portfoliobody">
+
 
       <div class="portfoliotop">
         <br><br>
@@ -34,7 +34,7 @@
 
       <div class="portfolioblock">
         <h3><hr>&nbsp;&nbsp;RESEARCH&nbsp;&nbsp;<hr></h3><br>
-        <p>Six user interviews, which focused on travel accommodation selection approaches, informed the traits featured in the following persona and the identified the challenges as outlined in the following journey map</p><br><br>
+        <p>Six user interviews, which focused on travel accommodation experiences and selection approaches, informed the traits and challenges featured in the following persona and corresponding journey map</p><br><br>
         
         <div class="artifactcontainer">
           <div class="annotationleft">
@@ -119,8 +119,8 @@
                 <td>2.&nbsp;Locale-specific research (e.g., Tripadvisor, LonelyPlanet)</td>
                 <td>3.&nbsp;Selecting a hotel location (geographical research)</td>
                 <td>4.&nbsp;Filtering based on preferences (e.g., price, amenities, etc.)</td>
-                <td>5.&nbsp;Read reviews to confirm or dismiss potential selections </td>
-                <td>6.&nbsp;Realize the infeasibility of certain aspects of the itinerary</td>
+                <td>5.&nbsp;Reading reviews to confirm or dismiss potential selections </td>
+                <td>6.&nbsp;Realizing the infeasibility of certain aspects of the itinerary</td>
               </tr>
               <tr>
                 <td class="col1">Happiness</td>
@@ -145,14 +145,15 @@
               </tr>
             </table>
 
-        <br><br><br><br>
-
+        <br><br><br>
+        <p> For additional context, sites/tools mentioned in user interviews were audited to identify opportunities to better address travelers' hotel research needs</p>
+        <br>
         <div class="artifactcontainer">
           <div class="annotationleft">
             <h5>COMPETITIVE ANALYSIS</h5>
           </div>
           <div class="artifactcontent">
-                        <p>Interviewees' research processes typically span multiple types of sources:</p>
+                        <p>Interviewees' research processes typically span multiple types of sources (i.e., maps, booking sites and travel guides):</p>
             <br>
             <table class="competitivetable">
               <tr>
@@ -254,8 +255,8 @@
                 <td>×</td>
               </tr>
             </table>
-            <br><br><p> An audit of these sources indicates that ...of relevant considerations is available... </p>
-            <p>However, there is value is aggregating...</p>
+            <br><br><p> The analysis indicates that there is no lack of readily available information for trip planners</p>
+            <p>However, there is value is aggregating [information] from different sources to shift the user's focus to logistics, which would allow for more efficient and exhaustive research</p>
           </div>
         </div>
     </div>
@@ -264,7 +265,7 @@
 
 
         <div class="portfolioblock">
-          <h3><hr>&nbsp;&nbsp;&nbsp;IDEATION&nbsp;&nbsp;&nbsp;<hr></h3><br><br>
+          <h3><hr>&nbsp;&nbsp;&nbsp;IDEATION&nbsp;&nbsp;&nbsp;<hr></h3><br>
           <i>How might we customize the accomodation selection process to allow for more informed decision making?</i><br>
           <br>Sketches → Wireframes<br><br><br>
 
@@ -365,16 +366,34 @@
 
         <div class="portfolioblock">    
           <h3><hr>&nbsp;&nbsp;PROTOTYPE&nbsp;&nbsp;<hr></h3>
+          <br>
           <div class="artifactcontainer">    
             <div class="protodesc">
-              <h6>Step 1. Itinerary</h6>
+              <h6>Phase 1. Itinerary</h6>
+              <p> Margo selects Beijing from the list of trending destinations on the homescreen</p>
+
+              <p> A catalog of popular attractions in Beijing is presented</p>
+
+              <p> Margo browses the short descriptions and visitors' photos that are available, adding items of interest to her itinerary list</p>
+
+              <p> Upon settling on a list of places that she wants to see, Margo ranks her itinerary items based on priority</p>
             </div>
             <p> <video autoplay muted loop playsinline width="375" src="source/CV Proto I.mp4"></p>
           </div>
+
+          <br>
+          <div class="artifactcontainer">    
+            <div class="protodesc">
+              <h6>Phase 2. Hotels</h6>
+              <p> Margo opens map</p>
+            </div>
+            <p> <video autoplay muted loop playsinline width="375" src="source/CV Proto II.mp4"></p>
+          </div>
+
         </div>
+
+
         <footer>&copy; JUDY CHAN 2019<br>QHC2@CORNELL.EDU</footer>
-        <!--<div>
-        </div>-->
 
 
     </div><!--closes portfoliobody-->
