--- a/clairvoyage.html
+++ b/clairvoyage.html
@@ -385,7 +385,12 @@
           <div class="artifactcontainer">    
             <div class="protodesc">
               <h6>Phase 2. Hotels</h6>
-              <p> Margo opens map</p>
+              <p> A custom map displaying her itinerary items alongside potential nearby hotels allows Margo to visualize the geographical breadth of her plan</p>
+
+              <p>Filters (e.g., trip dates, budget) can easily be toggled on and off to compare options if she compromises on certain considerations</p>
+
+              <p>Ensuring a focus on logistics, when Margo selects a hotel on the map, she sees distance from her itinerary items (top three based on rank) prominently presented</p>
+
             </div>
             <p> <video autoplay muted loop playsinline width="375" src="source/CV Proto II.mp4"></p>
           </div>
