--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="proj 1">
                 <div class="projthumbnail">
                   <a href="clairvoyage.html">
-                     <img src="source/Clairvoyage.png" width=120px>
+                     <img src="source/Clairvoyage.png">
                   </a>
                 </div>
                 <br>
@@ -45,7 +45,7 @@
           <div class="proj 2">
             <div class="projthumbnail">
               <a href="habit.html">
-              <img src="source/Habit.png" width=120px>
+              <img src="source/Habit.png">
               </a>
             </div>
               <br>
