--- a/clairvoyage.html
+++ b/clairvoyage.html
@@ -24,13 +24,26 @@
 
 
       <div class="portfoliotop">
-        <br><br>
-        <img src="source/clairheaderimage.png" style="width:500px" alt="clairvoyage"> <br><br>
-        <h1>CLAIRVOYAGE</h1>
-        <i>Technology has made the world a smaller place — use it to facilitate informed decision making when choosing accommodations.</i>
+        <!--THE PREVIEW IMAGE OF THE APP ON TOP-->
+        <div class="headerimage">
+          <div class="CVheaderimage1">
+          </div>
+          <div class="CVheaderimage2">
+          </div>
+          <div class="CVheaderimage3">
+          </div>
+          <div class="CVheaderimage4"><!--actually the 1st image repeated-->
+          </div>
+        </div>
+
+        <h1><hr>&nbsp;&nbsp;CLAIRVOYAGE&nbsp;&nbsp;<hr></h1>
+        <span class="whitetext"> UX & UI (Sketch, Principle)&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#prototype">Peek at prototype →</a></span>
+        <p style="font-size:0.87em; opacity:0.7;"><i>The world is a smaller place thanks to technology — visualize <br>travel plans for faraway destinations and select accommodations with <br>confidence that they will make sense in the context of the itinerary</i></p>
+
+
       </div>
 
-        <br><br><br><br>
+        <br><br>
 
       <div class="portfolioblock">
         <h3><hr>&nbsp;&nbsp;RESEARCH&nbsp;&nbsp;<hr></h3><br>
@@ -43,7 +56,7 @@
           <div class="artifactcontent">
             <ul>
             <li>Negative travel accommodation experiences are often tied to:</li>
-            <li type="circle" class="subbullet">Misconceptions regarding location and proximity</li>
+            <li type="circle" class="subbullet">Misconceptions regarding location and proximity (e.g., hotel is farther from activities than one realized)</li>
             <li type="circle" class="subbullet">Disillusionment due to insufficient / misleading online portrayals</li>
             <li>Planning is typically done on desktop due to screen size and complexity of research</li>
           </ul>
@@ -365,7 +378,7 @@
         <br><br>
 
         <div class="portfolioblock">    
-          <h3><hr>&nbsp;&nbsp;PROTOTYPE&nbsp;&nbsp;<hr></h3>
+          <h3 id="prototype"><hr>&nbsp;&nbsp;PROTOTYPE&nbsp;&nbsp;<hr></h3>
           <br>
           <div class="artifactcontainer">    
             <div class="protodesc">
