--- a/index.html
+++ b/index.html
@@ -78,10 +78,13 @@
           <!--<a href="#close" title="Close" class="close">×</a>-->
           <div class="overlaytext">
               <br>
-              <h4> Judy is an end-to-end product designer based in New York City.</h4>
-              <p>
-                She studied economics at Cornell and trained in digital and graphic design and UI / UX design at Parsons and Pratt, respectively.
-              </p>
+              <h4>I'm a digital designer based in New York City.</h4>
+              <p>As a behavioral economics enthusiast, I started my career in compensation consulting. I am currently looking for internships/junior UI/UX or product design roles.</p>
+              <p>I studied economics at Cornell and trained in digital and graphic design and UI / UX design at certificate programs at Parsons School of Design and Pratt Institute, respectively.</p>
+              <br>
+              <h6><a href="mailto:qhc2@cornell.edu">Send an email →</a></h6>
+              <br>
+              <h6><a href=#>View resume →</a></h6>
        
           </div>
         </div>
@@ -95,7 +98,7 @@
       </div>
     -->
 
-    <div id="close" class="sprite">
+    <div class="sprite">
       <div class="sprite1">
       </div>
       <div class="sprite2">
