--- a/clairvoyage.html
+++ b/clairvoyage.html
@@ -70,7 +70,7 @@
             <table class="personatable">
               <tr>
                 <td class="col1">
-                  <img src="source/persona.svg" style="width:60%">
+                  <img src="source/Persona.svg" style="width:60%">
                   <p class="bubbletext">MILLENNIAL<br>MARGO</p>
                 </td>
                 <td class="col2">
